--- a/codingdojang7.ipynb
+++ b/codingdojang7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOs5EilAqiC8Fc7JtVyYJ5l",
+      "authorship_tag": "ABX9TyOEB3Nfg8GdKtQ7Dg6T5Xs2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,39 @@
         "    co.send(i)            # 코루틴 accumulate에 숫자를 보냄\n",
         "co.send(None)             # 코루틴 accumulate에 None을 보내서 숫자 누적을 끝냄"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def accumulate():\n",
+        "    total = 0\n",
+        "    while True:\n",
+        "        x = (yield)         # 코루틴 바깥에서 값을 받아옴\n",
+        "        if x is None:       # 받아온 값이 None이면\n",
+        "            return total    # 합계 total을 반환\n",
+        "        total += x\n",
+        " \n",
+        "def sum_coroutine():\n",
+        "    while True:\n",
+        "        total = yield from accumulate()    # accumulate의 반환값을 가져옴\n",
+        "        print(total)\n",
+        " \n",
+        "co = sum_coroutine()\n",
+        "next(co)\n",
+        " \n",
+        "for i in range(1, 11):    # 1부터 10까지 반복\n",
+        "    co.send(i)            # 코루틴 accumulate에 숫자를 보냄\n",
+        "co.send(None)             # 코루틴 accumulate에 None을 보내서 숫자 누적을 끝냄\n",
+        " \n",
+        "for i in range(1, 101):   # 1부터 100까지 반복\n",
+        "    co.send(i)            # 코루틴 accumulate에 숫자를 보냄\n",
+        "co.send(None)             # 코루틴 accumulate에 None을 보내서 숫자 누적을 끝냄"
+      ],
+      "metadata": {
+        "id": "eU9w17RGQd4S"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
