--- a/codingdojang7.ipynb
+++ b/codingdojang7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEB3Nfg8GdKtQ7Dg6T5Xs2",
+      "authorship_tag": "ABX9TyP5yvUx/ulUAW3tcC+lW9x+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,6 +104,22 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "```\n",
+        "class Calc:\n",
+        "    @staticmethod    # 데코레이터\n",
+        "    def add(a, b):\n",
+        "        print(a + b)\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "AK4dFFtZUEy9"
+      }
     }
   ]
 }
