Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0Y2XAhuNCYTseFo6FQ5gC",
+      "authorship_tag": "ABX9TyP2i4YPsgUn3OwMrXOtMCbB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "kmaiX96F6NCo"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "id": "D0jQ9Nsc6c9s",
         "outputId": "b00e01e3-bf5d-4b86-8a59-6a3d1a374ef2"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
         "id": "m35UkozM6gsv",
         "outputId": "1bbbe3d2-68fc-439a-8de0-8cd00a64cdde"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
         "id": "8USRAuSr6klq",
         "outputId": "919b298c-ee36-4614-cb3d-535e94d5e28f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,8 +150,48 @@
       "metadata": {
         "id": "tUeTd36l6oPU"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re"
+      ],
+      "metadata": {
+        "id": "7zuZg0wDyuPj"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('a*b', 'b')      # b에는 a가 0개 이상 있으므로 패턴에 매칭됨\n",
+        "re.match('a+b', 'b')      # b에는 a가 1개 이상 없으므로 패턴에 매칭되지 않음\n",
+        "re.match('a*b', 'aab')    # aab에는 a가 0개 이상 있으므로 패턴에 매칭됨\n",
+        "re.match('a+b', 'aab')    # aab에는 a가 1개 이상 있으므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fNZHdCzKxWvN",
+        "outputId": "65b7d88c-ec3e-47df-e191-6a9ec80123d1"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 3), match='aab'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
