--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2i4YPsgUn3OwMrXOtMCbB",
+      "authorship_tag": "ABX9TyP4Y5onwM5lY/qLQmtn59TM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "7zuZg0wDyuPj"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         "id": "fNZHdCzKxWvN",
         "outputId": "65b7d88c-ec3e-47df-e191-6a9ec80123d1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -200,6 +200,115 @@
       ],
       "metadata": {
         "id": "abSACXj162Mw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re"
+      ],
+      "metadata": {
+        "id": "aJ7vcN4uxDi-"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('abc?d', 'abd')         # abd에서 c 위치에 c가 0개 있으므로 패턴에 매칭됨\n",
+        "re.match('ab[0-9]?c', 'ab3c')    # [0-9] 위치에 숫자가 1개 있으므로 패턴에 매칭됨\n",
+        "re.match('ab.d', 'abxd')         # .이 있는 위치에 문자가 1개 있으므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MSJuoLcQwt5S",
+        "outputId": "4955c7bc-1cc9-4885-dacd-0d88ae42f3a5"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 4), match='abxd'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('h{3}', 'hhhello')"
+      ],
+      "metadata": {
+        "id": "ANTZb5n5xK3T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('(hello){3}', 'hellohellohelloworld')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "amdW9rBcxO97",
+        "outputId": "0be2e0ae-f4d8-48de-ce45-ec70b1057dad"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 15), match='hellohellohello'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('[0-9]{3}-[0-9]{4}-[0-9]{4}', '010-1000-1000')    # 숫자 3개-4개-4개 패턴에 매칭됨\n",
+        "re.match('[0-9]{3}-[0-9]{4}-[0-9]{4}', '010-1000-100')   # 숫자 3개-4개-4개 패턴에 매칭되지 않음"
+      ],
+      "metadata": {
+        "id": "hX9mQXu1xgm1"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('[0-9]{2,3}-[0-9]{3,4}-[0-9]{4}', '02-100-1000')    # 2~3개-3~4개-4개 패턴에 매칭됨\n",
+        "re.match('[0-9]{2,3}-[0-9]{3,4}-[0-9]{4}', '02-10-1000')  # 2~3개-3~4개-4개 패턴에 매칭되지 않음"
+      ],
+      "metadata": {
+        "id": "irHM2IR7xmDy"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### unit 43.2.3 숫자와 영문 문자를 조합해서 판단하기"
+      ],
+      "metadata": {
+        "id": "LqbJyhyWyExA"
       }
     }
   ]
