Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4Y5onwM5lY/qLQmtn59TM",
+      "authorship_tag": "ABX9TyPh7fvpxZmu397djzRH/oXq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "aJ7vcN4uxDi-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "id": "MSJuoLcQwt5S",
         "outputId": "4955c7bc-1cc9-4885-dacd-0d88ae42f3a5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -264,7 +264,7 @@
         "id": "amdW9rBcxO97",
         "outputId": "0be2e0ae-f4d8-48de-ce45-ec70b1057dad"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
       "metadata": {
         "id": "hX9mQXu1xgm1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +299,7 @@
       "metadata": {
         "id": "irHM2IR7xmDy"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -310,6 +310,64 @@
       "metadata": {
         "id": "LqbJyhyWyExA"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re"
+      ],
+      "metadata": {
+        "id": "RxHjrKoJH2bs"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('[a-zA-Z0-9]+', 'Hello1234')    # a부터 z, A부터 Z, 0부터 9까지 1개 이상 있으므로\n",
+        "re.match('[A-Z0-9]+', 'hello')    # 대문자, 숫자는 없고 소문자만 있으므로 패턴에 매칭되지 않음"
+      ],
+      "metadata": {
+        "id": "ls059TgkHwfU"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " re.match('[가-힣]+', '홍길동')    # 가부터 힣까지 1개 이상 있으므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kLNs4yILHzFq",
+        "outputId": "2ad452f6-56ab-4dd6-9008-3205bb599bbd"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 3), match='홍길동'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uvZJj4mWH3h2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
