Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPh7fvpxZmu397djzRH/oXq",
+      "authorship_tag": "ABX9TyNslIVCOR+7mDoOu6eQBwwU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -319,7 +319,7 @@
       "metadata": {
         "id": "RxHjrKoJH2bs"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "ls059TgkHwfU"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,13 +340,13 @@
         " re.match('[가-힣]+', '홍길동')    # 가부터 힣까지 1개 이상 있으므로 패턴에 매칭됨"
       ],
       "metadata": {
+        "id": "kLNs4yILHzFq",
+        "outputId": "2ad452f6-56ab-4dd6-9008-3205bb599bbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "kLNs4yILHzFq",
-        "outputId": "2ad452f6-56ab-4dd6-9008-3205bb599bbd"
+        }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,9 +362,85 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import re"
+      ],
+      "metadata": {
+        "id": "aTQ3w3GQgZ1W"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "re.match('[^A-Z]+', 'Hello')    # 대문자를 제외. 대문자가 있으므로 패턴에 매칭되지 않음\n",
+        "re.match('[^A-Z]+', 'hello')    # 대문자를 제외. 대문자가 없으므로 패턴에 매칭됨"
+      ],
       "metadata": {
         "id": "uvZJj4mWH3h2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.search('^[A-Z]+', 'Hello')        # 대문자로 시작하므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "74TLZGnugduB",
+        "outputId": "b9ad6885-b0e3-43ca-ff48-692d94d80e23"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 1), match='H'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.search('[0-9]+$', 'Hello1234')    # 숫자로 끝나므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HXONsPPNgeC5",
+        "outputId": "c36548fe-80c0-4c77-e297-896a0a5eef5a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(5, 9), match='1234'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wJPSl61zgglH"
       },
       "execution_count": null,
       "outputs": []
