Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNslIVCOR+7mDoOu6eQBwwU",
+      "authorship_tag": "ABX9TyMT6hKYdjEQi6b7Ujvn2l2Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3NtK8hQC58s8",
-        "outputId": "dda32ee2-1c5a-414b-aa69-18b43dcc320a"
+        "outputId": "9c3efcc8-915a-4f1d-80fd-19f0250562e9"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "kmaiX96F6NCo"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D0jQ9Nsc6c9s",
-        "outputId": "b00e01e3-bf5d-4b86-8a59-6a3d1a374ef2"
+        "outputId": "4fb7a19d-eb9e-455a-820d-d7aabb5c0255"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m35UkozM6gsv",
-        "outputId": "1bbbe3d2-68fc-439a-8de0-8cd00a64cdde"
+        "outputId": "3a57246a-2747-4fb9-9f2f-befc01659a76"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8USRAuSr6klq",
-        "outputId": "919b298c-ee36-4614-cb3d-535e94d5e28f"
+        "outputId": "039ffe50-d71a-4784-a9ad-0a914c6c4175"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "tUeTd36l6oPU"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "7zuZg0wDyuPj"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -177,9 +177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fNZHdCzKxWvN",
-        "outputId": "65b7d88c-ec3e-47df-e191-6a9ec80123d1"
+        "outputId": "5c045ca1-26e3-465d-ba8d-2b038327f6e7"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 8
         }
       ]
     },
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "aJ7vcN4uxDi-"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -225,9 +225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MSJuoLcQwt5S",
-        "outputId": "4955c7bc-1cc9-4885-dacd-0d88ae42f3a5"
+        "outputId": "abf04a8a-5242-41a1-fa41-a205cc4dcb6a"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +237,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 10
         }
       ]
     },
@@ -247,10 +247,25 @@
         "re.match('h{3}', 'hhhello')"
       ],
       "metadata": {
-        "id": "ANTZb5n5xK3T"
+        "id": "ANTZb5n5xK3T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6bf86477-7440-46ce-9e26-f7085c62be1e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 3), match='hhh'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -262,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "amdW9rBcxO97",
-        "outputId": "0be2e0ae-f4d8-48de-ce45-ec70b1057dad"
+        "outputId": "89852aa2-e5b6-4304-9a45-b3386924a78e"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +289,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 12
         }
       ]
     },
@@ -287,7 +302,7 @@
       "metadata": {
         "id": "hX9mQXu1xgm1"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -299,7 +314,7 @@
       "metadata": {
         "id": "irHM2IR7xmDy"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -319,7 +334,7 @@
       "metadata": {
         "id": "RxHjrKoJH2bs"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -331,7 +346,7 @@
       "metadata": {
         "id": "ls059TgkHwfU"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -341,12 +356,12 @@
       ],
       "metadata": {
         "id": "kLNs4yILHzFq",
-        "outputId": "2ad452f6-56ab-4dd6-9008-3205bb599bbd",
+        "outputId": "ce2a2c48-0f8f-47e8-e6e5-18d9c4dc6799",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -356,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 17
         }
       ]
     },
@@ -368,7 +383,7 @@
       "metadata": {
         "id": "aTQ3w3GQgZ1W"
       },
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -379,10 +394,25 @@
         "re.match('[^A-Z]+', 'hello')    # 대문자를 제외. 대문자가 없으므로 패턴에 매칭됨"
       ],
       "metadata": {
-        "id": "uvZJj4mWH3h2"
+        "id": "uvZJj4mWH3h2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bbfcb8c5-f54b-4f9a-b2a0-3cb2d66c07fd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 5), match='hello'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -394,9 +424,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74TLZGnugduB",
-        "outputId": "b9ad6885-b0e3-43ca-ff48-692d94d80e23"
+        "outputId": "c2648dde-aed8-44ea-c4a7-312171fd58e5"
       },
-      "execution_count": 2,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +436,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 20
         }
       ]
     },
@@ -420,9 +450,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXONsPPNgeC5",
-        "outputId": "c36548fe-80c0-4c77-e297-896a0a5eef5a"
+        "outputId": "13474901-96af-4185-d64a-e7b702a59256"
       },
-      "execution_count": 3,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +462,184 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 43.2.5 특수문자 판단하기"
+      ],
+      "metadata": {
+        "id": "hDixW_Rifucl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.search('\\*+', '1 ** 2') # *이 들어있는지 판단     "
+      ],
+      "metadata": {
+        "id": "wJPSl61zgglH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83853885-c414-446f-f000-ea4cbe41b9b8"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(2, 4), match='**'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('[$()a-zA-Z0-9]+', '$(document)')    # $, (, )와 문자, 숫자가 들어있는지 판단"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jjtNcbyXfzvc",
+        "outputId": "6effabd2-2ff3-42f6-eda7-a45d016d8547"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 11), match='$(document)'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- \\d: [0-9]와 같음. 모든 숫자\n",
+        "- \\D: [^0-9]와 같음. 숫자를 제외한 모든 문자\n",
+        "- \\w: [a-zA-Z0-9_]와 같음. 영문 대소문자, 숫자, 밑줄 문자\n",
+        "- \\W: [^a-zA-Z0-9_]와 같음. 영문 대소문자, 숫자, 밑줄 문자를 제외한 모든 문자"
+      ],
+      "metadata": {
+        "id": "356eWISwf9S7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('\\d+', '1234')          # 모든 숫자이므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QY38kCb9f9u3",
+        "outputId": "f2a19a20-00cc-47dd-b251-920df3490184"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 4), match='1234'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('\\D+', 'Hello')         # 숫자를 제외한 모든 문자이므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "24hEN6jEgFLY",
+        "outputId": "6fb217ad-33ba-48c8-f38f-550cd7bee888"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 5), match='Hello'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('\\w+', 'Hello_1234')    # 영문 대소문자, 숫자, 밑줄 문자이므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jj9R5d_YgFwG",
+        "outputId": "3275127f-5356-4172-8d3a-9889e504295b"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 10), match='Hello_1234'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('\\W+', '(:)')    # 영문 대소문자, 숫자, 밑줄문자를 제외한 모든 문자이므로 패턴에 매칭됨"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ya20RJa8gSLp",
+        "outputId": "8ec15788-2e0b-40a1-a4cf-e1b0e64fbcae"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 3), match='(:)'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     },
@@ -440,7 +647,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wJPSl61zgglH"
+        "id": "heXSnJnMgU1c"
       },
       "execution_count": null,
       "outputs": []
