Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMT6hKYdjEQi6b7Ujvn2l2Y",
+      "authorship_tag": "ABX9TyOJMr0WQrB0QiFJBqbpW4rW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "kmaiX96F6NCo"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
         "id": "D0jQ9Nsc6c9s",
         "outputId": "4fb7a19d-eb9e-455a-820d-d7aabb5c0255"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -102,7 +102,7 @@
         "id": "m35UkozM6gsv",
         "outputId": "3a57246a-2747-4fb9-9f2f-befc01659a76"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +128,7 @@
         "id": "8USRAuSr6klq",
         "outputId": "039ffe50-d71a-4784-a9ad-0a914c6c4175"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "tUeTd36l6oPU"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "7zuZg0wDyuPj"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
         "id": "fNZHdCzKxWvN",
         "outputId": "5c045ca1-26e3-465d-ba8d-2b038327f6e7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "aJ7vcN4uxDi-"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
         "id": "MSJuoLcQwt5S",
         "outputId": "abf04a8a-5242-41a1-fa41-a205cc4dcb6a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +253,7 @@
         },
         "outputId": "6bf86477-7440-46ce-9e26-f7085c62be1e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +279,7 @@
         "id": "amdW9rBcxO97",
         "outputId": "89852aa2-e5b6-4304-9a45-b3386924a78e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "hX9mQXu1xgm1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +314,7 @@
       "metadata": {
         "id": "irHM2IR7xmDy"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "RxHjrKoJH2bs"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
       "metadata": {
         "id": "ls059TgkHwfU"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +383,7 @@
       "metadata": {
         "id": "aTQ3w3GQgZ1W"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -400,7 +400,7 @@
         },
         "outputId": "bbfcb8c5-f54b-4f9a-b2a0-3cb2d66c07fd"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -426,7 +426,7 @@
         "id": "74TLZGnugduB",
         "outputId": "c2648dde-aed8-44ea-c4a7-312171fd58e5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
         "id": "HXONsPPNgeC5",
         "outputId": "13474901-96af-4185-d64a-e7b702a59256"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
         },
         "outputId": "83853885-c414-446f-f000-ea4cbe41b9b8"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
         "id": "jjtNcbyXfzvc",
         "outputId": "6effabd2-2ff3-42f6-eda7-a45d016d8547"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +551,7 @@
         "id": "QY38kCb9f9u3",
         "outputId": "f2a19a20-00cc-47dd-b251-920df3490184"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +577,7 @@
         "id": "24hEN6jEgFLY",
         "outputId": "6fb217ad-33ba-48c8-f38f-550cd7bee888"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +603,7 @@
         "id": "jj9R5d_YgFwG",
         "outputId": "3275127f-5356-4172-8d3a-9889e504295b"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +629,7 @@
         "id": "Ya20RJa8gSLp",
         "outputId": "8ec15788-2e0b-40a1-a4cf-e1b0e64fbcae"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,9 +645,120 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import re"
+      ],
       "metadata": {
         "id": "heXSnJnMgU1c"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('[a-zA-Z0-9 ]+', 'Hello 1234')     # ' '로 공백 표현"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JsWO9lUQy5fu",
+        "outputId": "e0185ac1-e742-4643-f172-b40fa0486492"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 10), match='Hello 1234'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "re.match('[a-zA-Z0-9\\s]+', 'Hello 1234')    # \\s로 공백 표현"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kryN1_SozHpW",
+        "outputId": "343ea50d-1daf-4523-a33d-70d272094585"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 10), match='Hello 1234'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = re.compile('[0-9]+')    # 정규표현식 패턴을 객체로 만듦"
+      ],
+      "metadata": {
+        "id": "OtwcBmKUzJka"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p.match(\"1234\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GDXQA5gqzPLV",
+        "outputId": "d3c24246-9552-4093-ba58-7add7ee32a3e"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 4), match='1234'>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p.search(\"hello\")"
+      ],
+      "metadata": {
+        "id": "AsMGvuyDzSkY"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hFya0uatzYL8"
       },
       "execution_count": null,
       "outputs": []
